codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_application_policy_failure.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: rendered
---
■ Fatal error: Application network policy blocked company sign-in. Inspect managed network requirements; your saved credential was preserved. Signing in again does not remove this restriction.
