codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_continue.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  MCP connection updated
  Start a new conversation with your draft. History is saved; nothing replays.

› 1. Start new conversation  Review your preserved draft before sending.
  2. Manage connections      Return to /mcp.

  Press enter to confirm or esc to go back
