codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_discovery_progress.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  Connecting and discovering MCP tools…
  Checking the connection. Tool discovery does not execute a tool.

› 1. Cancel  Stop this operation.

  Press enter to confirm or esc to go back
