codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_exchange_progress.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  Completing MCP sign-in…
  Browser response received. Verifying authorization with the gateway.

› 1. Cancel  Stop this operation.

  Press enter to confirm or esc to go back
