codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_manager_overview.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  MCP connections
  Connections belong to this environment. Inference sign-in stays separate.

› 1. service-now             Not connected
  2. Add gateway MCP server  Connect a server through its AI Gateway MCP URL.
  3. Refresh connections     Check the gateway connection and available tools.

  Press enter to confirm or esc to go back
