codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_manager_remove.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  Remove service-now?
  Inference sign-in and history stay saved. Continue in a new conversation.

› 1. Cancel   Keep this connection.
  2. Confirm  Apply this change to the selected environment.

  Press enter to confirm or esc to go back
