codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_onboarding_name.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---

▌ Name this MCP connection
▌ Local connection name; your gateway workspace stays unchanged.
▌
▌ service-now

Press enter to confirm or esc to go back
