codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_sign_in.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  Sign in to mcp-server-1
  Sign in in your browser, then choose a new conversation.

› 1. Sign in  Open gateway sign-in and save credentials in the native store.
  2. Cancel   Keep your conversation and draft. Use /signin when ready.

  Press enter to confirm or esc to go back
