codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__airs_recovery__airs_mcp_storage_progress.snap
---
source: tui/src/chatwidget/tests/airs_recovery.rs
expression: render_recovery(&chat)
---


  Saving MCP credential…
  Gateway authorization completed. Waiting for credential storage.

› 1. Cancel  Stop this operation.

  Press enter to confirm or esc to go back
